# fru_gen

./: .gitignore  Cargo.toml  LICENSE  RELEASE_NOTES.md  build_test.toml  fru_gen  fru_gen.toml  output.yaml  readme.md  test_error.toml  test_missing.toml  test_reserve.toml  test_reserve.yaml
src/: common.rs  fruGen.toml  lib.rs  main.rs
src/modules/: area.rs  board_area.rs  chassis_area.rs  fru_data.rs  fru_editor.rs  internal_area.rs  mod.rs  product_area.rs
tests/: Cli.rs  cli_tests.rs  lib_tests.rs  modules_tests.rs
