[package]
name = "fru_gen"
version = "0.1.14"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
assert_cmd = "2.0.16"
clap = { version = "4.5.20", features = ["derive"] }
config = "0.14.1"
crossterm = "0.28.1"
predicates = "3.1.2"
serde = "1.0.213"
tempfile = "3.13.0"
thiserror = "2.0.0"
tui = "0.19.0"
